internal/gatewayapi/testdata/envoyextensionpolicy-with-wasm.in.yaml
secrets:
- apiVersion: v1
  kind: Secret
  metadata:
    namespace: envoy-gateway
    name: my-pull-secret
  data:
    .dockerconfigjson: VGhpc0lzTm90QVJlYWxEb2NrZXJDb25maWdKc29u
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    namespace: envoy-gateway
    name: gateway-1
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
httpRoutes:
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    namespace: default
    name: httproute-1
  spec:
    hostnames:
    - www.example.com
    parentRefs:
    - namespace: envoy-gateway
      name: gateway-1
      sectionName: http
    rules:
    - matches:
      - path:
          value: "/foo"
      backendRefs:
      - name: service-1
        port: 8080
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    namespace: default
    name: httproute-2
  spec:
    hostnames:
    - www.example.com
    parentRefs:
    - namespace: envoy-gateway
      name: gateway-1
      sectionName: http
    rules:
    - matches:
      - path:
          value: "/bar"
      backendRefs:
      - name: service-1
        port: 8080
envoyextensionpolicies:
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: EnvoyExtensionPolicy
  metadata:
    namespace: envoy-gateway
    name: policy-for-gateway  # This policy should attach httproute-2
  spec:
    targetRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-1
    wasm:
    - name: wasm-filter-1
      code:
        type: HTTP
        http:
          url: https://www.example.com/wasm-filter-1.wasm
          sha256: 2d89c4c6ab2a1c615c7696ed37ade9e50654ac70384b5d45100eb08e62130ff4
      config:
        parameter1:
          key1: value1
          key2: value2
        parameter2: value3
    - name: wasm-filter-2
      rootID: "my-root-id"
      code:
        type: Image
        image:
          url: oci://www.example.com/wasm-filter-2:v1.0.0
          pullSecretRef:
            name: my-pull-secret
          sha256: 314100af781b98a8ca175d5bf90a8bf76576e20a2f397a88223404edc6ebfd46
      config:
        parameter1: value1
        parameter2: value2
    - code:
        type: Image
        image:
          url: www.example.com:8080/wasm-filter-3
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: EnvoyExtensionPolicy
  metadata:
    namespace: default
    name: policy-for-http-route   # This policy should attach httproute-1
  spec:
    targetRef:
      group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: httproute-1
    backends:
    - name: resolver
      backendRef:
        name: service-1
        port: 8080
    wasm:
    - name: wasm-filter-4
      code:
        type: HTTP
        http:
          url: https://www.test.com/wasm-filter-4.wasm
          sha256: b6922722ab58109abfaa8d9eb16f339b38b2bb1c17076b083b34438b934e7463
      config:
        parameter1:
          key1: value1
        parameter2:
          key2:
            key3: value3
      failOpen: true
